
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint32_t ;
typedef int proto ;
typedef int plen ;
typedef int cmd ;
typedef int buf ;


 int MSG_WAITALL ;
 int recv (int,int*,int,int ) ;

int
recv_hello (int fd)
{
 unsigned char buf[256];
 uint8_t proto, cmd;
 uint32_t plen;

 return
 (recv (fd, &proto, sizeof (proto), MSG_WAITALL) != sizeof (proto))
  || (proto != 0xE3)
  || (recv (fd, &plen, sizeof (plen), MSG_WAITALL) != sizeof (plen))
  || (plen < 33) || (--plen > sizeof (buf))
  || (recv (fd, &cmd, sizeof (cmd), MSG_WAITALL) != sizeof (cmd))
  || (cmd != 0x4C);
}
